TM-16907 Fix content overflow issue on Activity Metrics report

--- a/src/main/webapp/tds/web-app/css/page/module/reports/activity-metrics-report.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/reports/activity-metrics-report.component.sass
@@ -1,3 +1,4 @@
 .activity-metrics-report
     kendo-datepicker.k-datepicker
-        box-shadow:none
+        z-index: 0
+        box-shadow: none
